Fix width of collapsed header

--- a/css/max-768px.css
+++ b/css/max-768px.css
@@ -7,3 +7,8 @@ display: inline;
 list-style-type: none;
 padding-right: 20px;
 }
+#nav {
+	width: 100%;
+	border: none;
+	background: none;
+}
